[tool.poetry]
name = "feed-management"
version = "0.1.0"
description = ""
authors = ["choemingyu <mchead1@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.0"
PyMySQL = "^1.0.2"
mysqlclient = "^2.1.1"
bcrypt = "^3.2.2"
starlette = "^0.20.4"

[tool.poetry.dev-dependencies]
Faker = "^13.15.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
